[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/background.png" type="Texture" id=1]
[ext_resource path="res://assets/logo.png" type="Texture" id=2]
[ext_resource path="res://shared/home/home.gd" type="Script" id=3]
[ext_resource path="res://assets/theme/ButtonTheme.tres" type="Theme" id=4]
[ext_resource path="res://assets/icons/train.png" type="Texture" id=5]
[ext_resource path="res://assets/icons/play.png" type="Texture" id=6]
[ext_resource path="res://assets/icons/learn.png" type="Texture" id=7]
[ext_resource path="res://shared/back/back_button.tscn" type="PackedScene" id=8]
[ext_resource path="res://shared/about/about_button.tscn" type="PackedScene" id=9]
[ext_resource path="res://shared/avatarspace/avatar_button.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/fonts/RAVIE.TTF" type="DynamicFontData" id=11]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=3]
size = 30
outline_color = Color( 0.937255, 0.854902, 0.721569, 1 )
font_data = ExtResource( 11 )

[node name="home" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 6.10352e-05
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="TextureRect" parent="."]
anchor_left = 0.25
anchor_top = 0.05
anchor_right = 0.75
anchor_bottom = 0.35
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="learning" type="Button" parent="."]
anchor_left = 0.1
anchor_top = 0.5
anchor_right = 0.3
anchor_bottom = 0.8
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="learning"]
anchor_right = 1.0
anchor_bottom = 0.3
margin_top = -0.416
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.937255, 0.854902, 0.721569, 1 )
custom_colors/font_outline_modulate = Color( 0.937255, 0.854902, 0.721569, 1 )
text = "Apprendre"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="learning"]
anchor_left = 0.1
anchor_top = 0.4
anchor_right = 0.9
anchor_bottom = 0.9
texture = ExtResource( 7 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="training" type="Button" parent="."]
anchor_left = 0.4
anchor_top = 0.5
anchor_right = 0.6
anchor_bottom = 0.8
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="training"]
anchor_right = 1.0
anchor_bottom = 0.3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.937255, 0.854902, 0.721569, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "S'entrainer"
align = 1
valign = 1

[node name="icon" type="TextureRect" parent="training"]
anchor_left = 0.1
anchor_top = 0.4
anchor_right = 0.9
anchor_bottom = 0.9
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="playing" type="Button" parent="."]
anchor_left = 0.7
anchor_top = 0.5
anchor_right = 0.9
anchor_bottom = 0.8
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="playing"]
anchor_right = 1.0
anchor_bottom = 0.3
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.937255, 0.854902, 0.721569, 1 )
custom_colors/font_outline_modulate = Color( 0.937255, 0.854902, 0.721569, 1 )
text = "Jouer"
align = 1
valign = 1

[node name="icon" type="TextureRect" parent="playing"]
anchor_left = 0.25
anchor_top = 0.35
anchor_right = 0.75
anchor_bottom = 0.95
texture = ExtResource( 6 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back_button" parent="." instance=ExtResource( 8 )]

[node name="list_change" type="Button" parent="."]
anchor_left = 0.3
anchor_top = 0.9
anchor_right = 0.7
anchor_bottom = 1.0
theme = ExtResource( 4 )
text = "Listes de mots"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="about_button" parent="." instance=ExtResource( 9 )]

[node name="avatar_button" parent="." instance=ExtResource( 10 )]
[connection signal="pressed" from="learning" to="." method="learning_button_pressed"]
[connection signal="pressed" from="training" to="." method="training_button_pressed"]
[connection signal="pressed" from="playing" to="." method="playing_button_pressed"]
[connection signal="pressed" from="list_change" to="." method="_on_list_change_pressed"]
